@@ -1,6 +1,7 @@
 0.05
  - Add 'readme_from' directive to Makefile.PL.
  - Rewrite B<> to C<> in doc for code parameters and methods.
+ - Update Module::Install to 1.08 version.
 
 0.04 2013-09-21
  - Add LICENSE file.
